@@ -1,69 +1,68 @@
 package backend.sculptor.domain.museum.service;
 
-import backend.sculptor.domain.stone.entity.Stone;
-import backend.sculptor.domain.stone.repository.StoneRepository;
+import backend.sculptor.domain.follow.service.FollowService;
+import backend.sculptor.domain.museum.dto.MuseumDTO;
+import backend.sculptor.domain.stone.dto.StoneListDTO;
+import backend.sculptor.domain.stone.service.StoneService;
 import backend.sculptor.domain.user.entity.Users;
 import backend.sculptor.domain.user.repository.UserRepository;
-import backend.sculptor.domain.museum.dto.MuseumDTO;
-import backend.sculptor.global.api.APIBody;
+import backend.sculptor.global.exception.ErrorCode;
 import backend.sculptor.global.exception.NotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
+@RequiredArgsConstructor
 public class MuseumService {
 
     private final UserRepository userRepository;
-    private final StoneRepository stoneRepository;
-    //private final FollowService followService;
-
-    @Autowired
-    public MuseumService(UserRepository userRepository, StoneRepository stoneRepository) {
-        this.userRepository = userRepository;
-        this.stoneRepository = stoneRepository;
-        //this.followService = followService;
-    }
+    private final StoneService stoneService;
+    private final FollowService followService;
 
     public MuseumDTO getMuseumInfo(UUID ownerId, UUID userID) {
         Users owner = userRepository.findById(ownerId)
-                .orElseThrow(() -> new NotFoundException("User not found"));
+                .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND.getMessage()));
 
-        List<Stone> stones = stoneRepository.findByUsersId(ownerId);
+        List<StoneListDTO> stones = stoneService.getStonesByUserIdAfterFinalDate(ownerId);
 
-        MuseumDTO museumDTO = new MuseumDTO();
+        MuseumDTO museum = new MuseumDTO();
 
-        museumDTO.setIsOwner(userID);
-        museumDTO.setOwnerId(ownerId);
-        museumDTO.setOwnerNickname(owner.getNickname());
-        //museumDTO.setOwnerIntroduction(owner.getIntroduction());
-        museumDTO.setOwnerProfileImage(owner.getProfileImage());
-        //museumDTO.setFollowerCount(followService.getFollowerCount(ownerId));
-        //museumDTO.setFollowingCount(followService.getFollowingCount(ownerId));
+        museum.setIsOwner(userID);
+        museum.setIsFollowing(followService.isFollowing(userID, ownerId));
+        museum.setId(ownerId);
+        museum.setNickname(owner.getNickname());
+        museum.setIntroduction(owner.getUserIntroduction());
+        museum.setProfileImage(owner.getProfileImage());
+        museum.setStones(convertToMuseumStones(stones));
+        museum.setFollowerCount(followService.getFollowerSize(ownerId));
+        museum.setFollowingCount(followService.getFollowingSize(ownerId));
+        museum.setStoneCount();
 
-        museumDTO.setStones(convertToMuseumStones(stones));
-        museumDTO.setStoneCount();
-
-        return museumDTO;
+        return museum;
     }
 
     // Stone 엔터티를 MuseumStoneDTO로 변환하는 메서드
-    private List<MuseumDTO.Stone> convertToMuseumStones(List<Stone> stones) {
+    private List<MuseumDTO.Stone> convertToMuseumStones(List<StoneListDTO> stones) {
         return stones.stream()
                 .map(this::convertToMuseumStone)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 단일 Stone 엔터티를 MuseumStoneDTO로 변환하는 메서드
-    private MuseumDTO.Stone convertToMuseumStone(Stone stone) {
+    private MuseumDTO.Stone convertToMuseumStone(StoneListDTO stone) {
         MuseumDTO.Stone museumStone = new MuseumDTO.Stone();
-        museumStone.setId(stone.getId());
+        LocalDateTime startDate = stone.getStartDate();
+
+        museumStone.setId(stone.getStoneId());
         museumStone.setName(stone.getStoneName());
-        museumStone.setGoal(stone.getStoneGoal());
-        museumStone.setStartDate(stone.getStartDate());
-        museumStone.setDDay(stone.getFinalDate());
+        museumStone.setStartDate(startDate);
+        museumStone.setDDay(stoneService.calculateDate(startDate.toLocalDate()));
 
         return museumStone;
     }
